Class commented, added class UserInterface
MoveState, MrAngkot, StoppingPlace, and UserInterface have been
commented

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.junit-4.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
